@@ -12,25 +12,28 @@ setAs("ntCMatrix", "ngCMatrix",
       function(from) copyClass(diagU2N(from), "ngCMatrix"))
 
 
-.ntC2d <- function(from)
-    new("dtCMatrix", i = from@i, p = from@p,
-	x = rep.int(1, length(from@i)), uplo = from@uplo,
-	diag = from@diag, Dim = from@Dim, Dimnames = from@Dimnames)
+## --- these now happen using  "nCsparseMatrix" -- in ./ngCMatrix.R
+##
+## .ntC2d <- function(from)
+##     new("dtCMatrix", i = from@i, p = from@p,
+## 	x = rep.int(1, length(from@i)), uplo = from@uplo,
+## 	diag = from@diag, Dim = from@Dim, Dimnames = from@Dimnames)
 
-.ntC2l <- function(from)
-    new("ltCMatrix", i = from@i, p = from@p,
-	x = rep.int(TRUE, length(from@i)), uplo = from@uplo,
-	diag = from@diag, Dim = from@Dim, Dimnames = from@Dimnames)
+## .ntC2l <- function(from)
+##     new("ltCMatrix", i = from@i, p = from@p,
+## 	x = rep.int(TRUE, length(from@i)), uplo = from@uplo,
+## 	diag = from@diag, Dim = from@Dim, Dimnames = from@Dimnames)
 
-setAs("ntCMatrix", "dMatrix", .ntC2d)# < instead of "dtCMatrix"
-setAs("ntCMatrix", "dsparseMatrix", .ntC2d)
-setAs("ntCMatrix", "dtCMatrix", .ntC2d)
+## Not needed, once we use "nCsparseMatrix" (-> ./ngCMatrix.R ):
+setAs("ntCMatrix", "dMatrix", nC2d)
+setAs("ntCMatrix", "dsparseMatrix", nC2d)
+setAs("ntCMatrix", "dtCMatrix", nC2d)
+##
+setAs("ntCMatrix", "lMatrix", nC2l)
+setAs("ntCMatrix", "lsparseMatrix", nC2l)
+setAs("ntCMatrix", "ltCMatrix", nC2l)
 
-setAs("ntCMatrix", "lMatrix", .ntC2l)
-setAs("ntCMatrix", "lsparseMatrix", .ntC2l)
-setAs("ntCMatrix", "ltCMatrix", .ntC2l)
-
-rm(.ntC2d,.ntC2l) # don't even keep "hidden"
+## rm(.ntC2d,.ntC2l) # don't even keep "hidden"
 
 setAs("ngCMatrix", "ntCMatrix", # to triangular, needed for triu,..
       function(from) as(as(as(from, "TsparseMatrix"),
